2018-01-26  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Label.pm: Remove debug statement
	* server-src/driver.c: Do not add a COPY command if the dump is
	  already on the storage
	* server-src/driverio.c (startup_vault_tape_process): Use same taper
	  as storage

2018-01-26  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/DB/Catalog2/SQLite.pm: Typo

2018-01-26  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/DB/Catalog2/SQL.pm (get_nb_image_command_for_storage):
	  New method
	* server-src/amcatalog.pl: New get-nb-image-cmd-for-storage command
	* server-src/server_util.c (amcatalog_get_nb_image_cmd_for_storage):
	  New function
	* server-src/server_util.h (amcatalog_get_nb_image_cmd_for_storage):
	  Add prototype

2018-01-26  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/DB/Catalog2/SQL.pm: (reset_volume): Keep the storage_id
	* perl/Amanda/DB/Catalog2/SQLite.pm: Retry transaction on
	  /UNIQUE constraint failed/

2018-01-24  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driver.c: Send CLOSE-VOLUME command only if the volume
	  is opened

2018-01-24  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driver.c: fix queue handling

2018-01-23  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/amindexd.c (build_disk_table) Do not use GHashTableIter
	* server-src/cmdfile.c (cmdfile_get_all_glist): New function
	  that return all cmddata in a GList
	* server-src/cmdfile.h (cmdfile_get_all_glist): Add protoype
	* perl/Amanda/Cmdfile.swg (get_all): Wrap cmdfile_get_all_glist

2018-01-23  Jean-Louis Martineau <JMartineau@carbonite.com>
	* application-src/ampgsql.pl: s/xlog/wal/ in function name for version
	  10 and newer

2018-01-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driver.c (server-src/driver.c): Remove function

2018-01-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driver.c (tape_action): Improvement
